<resources>
    <string name="app_name">Airport Finder</string>
    <string name="title_activity_home">Home</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="dataMissing">Data was not loaded completely</string>
    <string name="dataError">Data does not exist</string>
    <string name="interruptedException">Network connection was interrupted</string>
    <string name="executionException">Could not execute process</string>
    <string name="emailError">Please enter a valid email</string>
    <string name="requestTimeOut">Host is taking too long to respond</string>
    <string name="loginError">Please check your login details</string>
    <string name="netError">Please check your network connection</string>
    <string name="exitConfirm">Are you sure you want to exit?</string>
    <string name="requestCallPermission">"Please allow Airport Finder to access this device's
        phone to make the call"</string>
    <string name="requestLocationPermission">"Please allow Airport Finder to access this device's
        location"</string>
    <string name="address">Address:  </string>
    <string name="airportDetailsHeading">Airport Details</string>
    <string name="phone">Phone No:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

</resources>
