<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context="com.finder.activity.LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edittext_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/box_padding"
            android:layout_marginRight="@dimen/box_padding"
            android:background="@drawable/username"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/text_padding"
            android:drawableStart="@drawable/user"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="@dimen/text_padding"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:paddingTop="@dimen/text_padding"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_login_email"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/box_padding"
            android:layout_marginRight="@dimen/box_padding"
            android:background="@drawable/password"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="@dimen/text_padding"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/text_padding"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_login_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/button_padding"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>
